Fixed spacing between expertise bubbles

--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@ body {
   opacity: 1;
   position: absolute;
   top: 1585px;
-  left: 965px;
+  left: 925px;
 }
 .cpp {
   width: 401px;
@@ -103,7 +103,7 @@ body {
   opacity: 1;
   position: absolute;
   top: 1209px;
-  left: 735px;
+  left: 715px;
 }
 .typescript {
   width: 401px;
@@ -115,7 +115,7 @@ body {
   opacity: 1;
   position: absolute;
   top: 1209px;
-  left: 275px;
+  left: 295px;
 }
 .java {
   width: 401px;
@@ -127,7 +127,7 @@ body {
   opacity: 1;
   position: absolute;
   top: 1585px;
-  left: 45px;
+  left: 85px;
 }
 
 
